[package]
name = "rust_nlp100"
version = "0.1.0"
authors = ["karita <shigekikarita@gmail.com>"]
edition = "2018"

[dependencies]

[[bin]]
name = "nlp00"
path = "src/bin/nlp00.rs"

[[bin]]
name = "nlp01"
path = "src/bin/nlp01.rs"

[[bin]]
name = "nlp02"
path = "src/bin/nlp02.rs"

[[bin]]
name = "nlp03"
path = "src/bin/nlp03.rs"

[[bin]]
name = "nlp04"
path = "src/bin/nlp04.rs"

[[bin]]
name = "nlp05"
path = "src/bin/nlp05.rs"

[[bin]]
name = "nlp06"
path = "src/bin/nlp06.rs"

[[bin]]
name = "nlp07"
path = "src/bin/nlp07.rs"

[[bin]]
name = "nlp08"
path = "src/bin/nlp08.rs"

[[bin]]
name = "nlp09"
path = "src/bin/nlp09.rs"

[[bin]]
name = "nlp10"
path = "src/bin/nlp10.rs"

[[bin]]
name = "nlp11"
path = "src/bin/nlp11.rs"

[[bin]]
name = "nlp12"
path = "src/bin/nlp12.rs"
